--- a/Courier Management system Next/Views/Generalsiteusers/Index.cshtml
+++ b/Courier Management system Next/Views/Generalsiteusers/Index.cshtml
@@ -2,13 +2,12 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/GeneralLayOutView.cshtml";
 }
 
 <h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
@@ -52,11 +51,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.UserType.Usertype1)
         </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.SiteUserid }) |
-            @Html.ActionLink("Details", "Details", new { id=item.SiteUserid }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.SiteUserid })
-        </td>
+      
     </tr>
 }
 
