--- a/Courier Management system Next/Views/AreaInfoes/Delete.cshtml
+++ b/Courier Management system Next/Views/AreaInfoes/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.aCost)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.status)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
