--- a/Courier Management system Next/Views/AreaInfoes/Details.cshtml
+++ b/Courier Management system Next/Views/AreaInfoes/Details.cshtml
@@ -26,6 +26,14 @@
             @Html.DisplayFor(model => model.aCost)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.status)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.status)
+        </dd>
+
     </dl>
 </div>
 <p>
