--- a/Courier Management system Next/Views/AreaInfoes/Index.cshtml
+++ b/Courier Management system Next/Views/AreaInfoes/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.aCost)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.status)
+        </th>
         <th></th>
     </tr>
 
@@ -27,6 +30,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.aCost)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.status)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.aAreaID }) |
