--- a/Courier Management system Next/Views/GeneralUserbookings/Index.cshtml
+++ b/Courier Management system Next/Views/GeneralUserbookings/Index.cshtml
@@ -4,150 +4,91 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+</head>
+<body>
+    <div class="container mt-4">
+        <h2 class="text-center">Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.bookOriginFirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookOriginLastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookOriginAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookOriginPhoneNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookDestFirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookDestLastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookDestAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookDestPhoneNo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookingProductWeight)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookDescription)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bCost)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TrackingNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.status)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.statusbit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookingDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.bookweight)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AreaInfo.aAreaName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AreaInfo1.aAreaName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BookingDelivareyType.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.deliveryMan.dFirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.siteuser.username)
-        </th>
-        <th></th>
-    </tr>
+        <div class="d-flex justify-content-between mb-3">
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookOriginFirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookOriginLastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookOriginAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookOriginPhoneNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookDestFirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookDestLastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookDestAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookDestPhoneNo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookingProductWeight)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookDescription)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bCost)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TrackingNumber)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.status)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.statusbit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookingDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.bookweight)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AreaInfo.aAreaName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AreaInfo1.aAreaName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BookingDelivareyType.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.deliveryMan.dFirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.siteuser.username)
-        </td>
-        <td>
-        
-            @Html.ActionLink("Details", "Details", new { id=item.bookID }) |
-        
-        </td>
-    </tr>
-}
+            <div class="col-auto">
+                <div class="card-body">
+                    @using (Html.BeginForm("GetCourierByTrackingNumber", "GeneralUserbookings", FormMethod.Post))
+                    {
+                        <div class="form-group">
+                            @Html.Label("Search By Tracking Number")
+                            @Html.TextBox("trackingNumber", "", new { @class = "form-control", required = "required", placeholder = "Enter trackingNumber" })
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
 
-</table>
+
+    </div>
+
+    <div class="card-body">
+        <div class="table-responsive">
+            <table class="table table-condensed table-hover table-bordered table-striped" id="bookingsTable" width="100%" cellspacing="0">
+                <thead class="text-bg-light">
+                    <tr>
+                        <th>Tracking Number</th>
+                        <th>Dest First Name</th>
+                        <th>Dest Phone No</th>
+                        <th>Product Weight</th>
+                        <th>Description</th>
+                        <th>Cost</th>
+                        <th>Status</th>
+                        <th>Origin</th>
+                        <th>Destination</th>
+
+                        <th>User</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr data-tracking-number="@item.TrackingNumber">
+                            <td>@Html.DisplayFor(modelItem => item.TrackingNumber)</td>
+                            <td>@Html.DisplayFor(modelItem => item.bookDestFirstName)</td>
+                            <td>@Html.DisplayFor(modelItem => item.bookDestPhoneNo)</td>
+                            <td>@Html.DisplayFor(modelItem => item.bookingProductWeight)</td>
+                            <td>@Html.DisplayFor(modelItem => item.bookDescription)</td>
+                            <td>@Html.DisplayFor(modelItem => item.bCost)</td>
+
+                            <td>@Html.DisplayFor(modelItem => item.status)</td>
+
+                            <td>@Html.DisplayFor(modelItem => item.AreaInfo.aAreaName)</td>
+                            <td>@Html.DisplayFor(modelItem => item.AreaInfo1.aAreaName)</td>
+
+                            <td>@Html.DisplayFor(modelItem => item.siteuser.username)</td>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new { id = item.bookID }, new { @class = "btn btn-sm btn-warning" }) |
+                                @Html.ActionLink("Details", "Details", new { id = item.bookID }, new { @class = "btn btn-sm btn-info" }) |
+                                @Html.ActionLink("Delete", "Delete", new { id = item.bookID }, new { @class = "btn btn-sm btn-danger" })
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+    </div>
+</body>
+</html>
