--- a/Courier Management system Next/Views/bookings/ConsignmentReport.cshtml
+++ b/Courier Management system Next/Views/bookings/ConsignmentReport.cshtml
@@ -48,7 +48,7 @@
                 <td>@(consignment.AreaInfo1?.aAreaName ?? "N/A")</td>
                 <td>@consignment.bookingProductWeight</td>
                 <td>@consignment.bookDescription</td>
-                <td>@consignment.bookingDate.ToString("yyyy-MM-dd")</td>
+                <td>@consignment.bookingDate</td>
                 <td>@(consignment.status)</td>
             </tr>
         }
