--- a/Courier Management system Next/Views/bookings/PickupReport.cshtml
+++ b/Courier Management system Next/Views/bookings/PickupReport.cshtml
@@ -47,7 +47,7 @@
                 <td>@pickup.bookOriginLastName</td>
                 <td>@pickup.bookDestFirstName</td>
                 <td>@pickup.bookDestLastName</td>
-                <td>@pickup.bookingDate.ToString("yyyy-MM-dd HH:mm:ss")</td>
+                <td>@pickup.bookingDate</td>
                 <td>@pickup.TrackingNumber</td>
                 <td>@pickup.status</td>
             </tr>
